--- a/src/output.css
+++ b/src/output.css
@@ -558,10 +558,6 @@ video {
   margin: auto;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
@@ -570,12 +566,12 @@ video {
   display: none;
 }
 
-.max-w-\[\] {
-  max-width: ;
+.w-\[33\%\] {
+  width: 33%;
 }
 
-.max-w-\[1200px\] {
-  max-width: 1200px;
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .max-w-\[350px\] {
@@ -586,60 +582,56 @@ video {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
 }
 
-.items-stretch {
-  align-items: stretch;
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.gap-4 {
+  gap: 1rem;
 }
 
-.self-end {
-  align-self: flex-end;
+.gap-5 {
+  gap: 1.25rem;
 }
 
-.rounded-\[\] {
-  border-radius: ;
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .rounded-\[10px\] {
   border-radius: 10px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-\[20px\] {
   border-radius: 20px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
+}
+
+.border-\[\#14142B0A\] {
+  border-color: #14142B0A;
 }
 
 .bg-\[\#0075FF\] {
@@ -647,14 +639,24 @@ video {
   background-color: rgb(0 117 255 / var(--tw-bg-opacity, 1));
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.bg-\[red\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-2 {
@@ -667,25 +669,28 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.text-\[45px\] {
-  font-size: 45px;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
-.text-\[55px\] {
-  font-size: 55px;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
-.text-\[60px\] {
-  font-size: 60px;
+.text-center {
+  text-align: center;
 }
 
 .text-\[20px\] {
@@ -696,13 +701,24 @@ video {
   font-size: 25px;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[60px\] {
+  font-size: 60px;
 }
 
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
+.text-\[50px\] {
+  font-size: 50px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-\[\#211F54\] {
@@ -710,22 +726,18 @@ video {
   color: rgb(33 31 84 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .text-\[\#6E7191\] {
   --tw-text-opacity: 1;
   color: rgb(110 113 145 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\] {
-  color: ;
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-\[\] {
+  color: ;
 }
 
 @media (min-width: 1024px) {
@@ -737,12 +749,12 @@ video {
     display: flex;
   }
 
-  .lg\:w-\[\] {
-    width: ;
-  }
-
   .lg\:w-\[45\%\] {
     width: 45%;
+  }
+
+  .lg\:w-\[33\%\] {
+    width: 33%;
   }
 
   .lg\:max-w-\[1200px\] {
