--- a/src/output.css
+++ b/src/output.css
@@ -566,10 +566,6 @@ video {
   display: none;
 }
 
-.w-\[33\%\] {
-  width: 33%;
-}
-
 .w-\[100\%\] {
   width: 100%;
 }
@@ -598,6 +594,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -610,12 +610,12 @@ video {
   gap: 1.25rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded-\[10px\] {
@@ -639,19 +639,29 @@ video {
   background-color: rgb(0 117 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[red\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -664,33 +674,22 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .text-\[20px\] {
@@ -701,20 +700,20 @@ video {
   font-size: 25px;
 }
 
-.text-\[60px\] {
-  font-size: 60px;
+.text-\[30px\] {
+  font-size: 30px;
 }
 
 .text-\[50px\] {
   font-size: 50px;
 }
 
-.text-\[30px\] {
-  font-size: 30px;
+.text-\[60px\] {
+  font-size: 60px;
 }
 
-.text-\[18px\] {
-  font-size: 18px;
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .font-bold {
@@ -736,8 +735,69 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\] {
-  color: ;
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_10px_20px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 10px 20px #14142B0A;
+  --tw-shadow-colored: 0px 0px 10px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_10px_10px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 10px 10px #14142B0A;
+  --tw-shadow-colored: 0px 0px 10px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_10px_5px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 10px 5px #14142B0A;
+  --tw-shadow-colored: 0px 0px 10px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_5px_5px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 5px 5px #14142B0A;
+  --tw-shadow-colored: 0px 0px 5px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_0px_5px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 0px 5px #14142B0A;
+  --tw-shadow-colored: 0px 0px 0px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_10px_1px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 10px 1px #14142B0A;
+  --tw-shadow-colored: 0px 0px 10px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_10px_4px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 10px 4px #14142B0A;
+  --tw-shadow-colored: 0px 0px 10px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_30px_4px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 30px 4px #14142B0A;
+  --tw-shadow-colored: 0px 0px 30px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0px_0px_30px_20px_\#14142B0A\] {
+  --tw-shadow: 0px 0px 30px 20px #14142B0A;
+  --tw-shadow-colored: 0px 0px 30px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 @media (min-width: 1024px) {
@@ -749,12 +809,12 @@ video {
     display: flex;
   }
 
-  .lg\:w-\[45\%\] {
-    width: 45%;
-  }
-
   .lg\:w-\[33\%\] {
     width: 33%;
+  }
+
+  .lg\:w-\[45\%\] {
+    width: 45%;
   }
 
   .lg\:max-w-\[1200px\] {
@@ -767,5 +827,9 @@ video {
 
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:text-start {
+    text-align: start;
   }
 }
